--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,13 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 </head>
 <header>
-  <a href="/about">Shoritterとは</a>
-  <a href="/">Shoritter top</a>
+  <ul>
+    <li>
+      <a href="/about">Shoritterとは</a></li>
+    <li>
+      <a href="/">Shoritter top</a></li>
+    <li>
+      <a href="/posts/index">一覧</a></li>
 </header>
 
 <body>
