--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -2,6 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .top-wrapper {
+    padding: 0;
     height: 720px;
     background-color: powderblue;
     background-image: url("/burger.jpg");
