--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -2,6 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .posts-show-item{
+    text-align: center;
     font-size:40px;
     margin: 45px;
     letter-spacing: 5px;
@@ -14,4 +15,9 @@
     border-radius: 10px;
     
     margin: 5px 0 5px 0;
+}
+
+.tweettime{
+    font-size: 20px;
+    padding-top: 20px;
 }
