--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,12 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 </head>
 <header>
-<div class="header-logo">Shoritter</div>
+  <div class="header-logo">Shoritter</div>
   <ul>
-
+    <li>
+      <%= link_to "新規投稿","/posts/new",class:"header-items"%></li>
     <li>
       <%= link_to "Shoritterとは","/about",class:"header-items" %></li>
-
     <li>
       <%= link_to "ぼやき一覧","/posts/index",class:"header-items" %></li>
     <li>
