--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -38,6 +38,10 @@
     display: block;
 }
 
+.posts-index-item a{
+    color: black;
+}
+
 .tweettime{
     font-size: 15px;
     padding-top: 20px;
