--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -18,7 +18,7 @@
      text-decoration: none;
  }
 header{
-    background-color:darkcyan;
+    background-color:darkblue;
     height: 70px;
     padding:0;
     margin: 0;
@@ -45,7 +45,7 @@ header li{
     float: right;
     list-style: none;
     line-height: 70px;
-    background-color: darkcyan;
+    background-color: darkblue;
     border-radius: 20px;
 }
 .header-items{
@@ -97,11 +97,12 @@ header li:hover{
     background-color: cadetblue;
     text-align: center;
     position: absolute;
-    top: 80px;
+    top: 90px;
     z-index: 10;
     width: 100%;
     font-size: 14px;
     padding: 10px 0;
+    opacity: 0.8;
 }
 
 .form{
