userページ追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,11 @@
       <%= link_to "Shoritterとは","/about",class:"header-items" %></li>
     <li>
       <%= link_to "ぼやき一覧","/posts/index",class:"header-items" %></li>
+    <li>
+      <%= link_to "ユーザー一覧","/users/index",class: "header-items"%></li>
+    <li>
+      <%= link_to "ユーザー登録","/signup",class: "header-items"%></li>
+  </ul>
 
 </header>
 <% if flash[:notice]%>
