--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,11 @@
 <div class="main posts-show">
     <div class="container">
         <div class="posts-show-item">
+       
+        <div class="post-user-name">
+         #<%= link_to(@user.name,"/users/#{@user.id}")%>
+        </div>
+        
             <%= @post.content %>
             <br>
             <div class="tweettime"><%= @post.created_at.to_s(:datetime_jp) %></div>
