--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,9 +1,14 @@
-<div class="main-posts-index">
-    <div class="container">
-        <% @posts.each do |post|%>
-        <div class="posts-index-item">
-            <%=link_to(post.content,"/posts/#{post.id}") %>
+<div class="main posts-index">
+  <div class="container">
+    <% @posts.each do |post| %>
+      <div class="posts-index-item">
+        <div class="post-right">
+          <div class="post-user-name">
+            <%= link_to(post.user.name,"/users/#{post.user.id}")%>
+          </div>
+          <%= link_to(post.content, "/posts/#{post.id}") %>
         </div>
-        <% end %>
-    </div>
+      </div>
+    <% end %>
+  </div>
 </div>
