--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,6 +6,8 @@
       <%= form_tag("/users/create") do %>
         <p>ユーザー名</p>
         <input name="name"> 
+        <p>パスワード</p>
+        <input type="password" name="password" value="<%= @user.password %>">
         <input type="submit" value="新規登録">
         <% end %>
       </div>
