ユーザー編集追加、エラー修正

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,9 +3,16 @@
     <div class="form-heading">ユーザー情報の編集</div>
     <div class="form users-form">
       <div class="form-body">
+        <% @user.errors.full_messages.each do |message| %>
+        <div class="form-error">
+          <%= message %>
+        </div>
+        <% end %>
+        <%= form_tag("/users/#{@user.id}/update") do%>
         <p>ユーザー名</p>
-        <input value ="<%= @user.name>%">
+        <input name="name" value="<%= @user.name %>">
         <input type="submit" value="保存">
+        <% end %>
       </div>
     </div>
   </div>
